@@ -53,6 +53,7 @@
   * Fix bug where qmlls failed to load due to qml not being in ~lsp-language-id-configuration~
   * Fix default value for ~lsp-rust-analyzer-cargo-cfgs~
   * Add ~lsp-ruby-lsp-server-command~ variable to allow overriding of the path to ~ruby-lsp~ executable
+  * Add support for the ~javascript.preferences.importModuleSpecifierEnding~ and ~typescript.preferences.importModuleSpecifierEnding~ preferences.
 
 ** 9.0.0
   * Add language server config for QML (Qt Modeling Language) using qmlls.
